--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
          </li>
 
           <li>
-            <a href="session/sessionStorage.html">SessionStorage</a>
+            <a href="sessionStorage.html">SessionStorage</a>
           </li>
 
           <li>
-            <a href="local/localStorage.html">LocalStorage</a>
+            <a href="localStorage.html">LocalStorage</a>
           </li>
 
           <li>
-            <a href="indexed/indexedDB.html">IndexedDB</a>
+            <a href="indexedDB.html">IndexedDB</a>
           </li>
 
           <li>
-            <a href="bibliografía/fuentesBibliograficas.html">Fuentes bibliograficas</a>
+            <a href="fuentesBibliograficas.html">Fuentes bibliograficas</a>
           </li>
 
         </ul>
@@ -44,6 +44,7 @@
             entre éstas dos es que localStorage almacena la información de forma indefinida o hasta que se decida limpiar los datos del navegador y sessionStorage almacena información mientras la pestaña donde se esté utilizando siga abierta, una vez cerrada, la información se elimina.
           </p>
         </div>
+
       </section>
       
       <footer class="site-footer">
