--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </li>
 
           <li>
-            <a href="fuentesBibliograficas.html">Fuentes bibliograficas</a>
+            <a href="bibliografia/fuentesBibliograficas.html">Fuentes bibliograficas</a>
           </li>
 
         </ul>
