--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
          </li>
 
           <li>
-            <a href="sessionStorage.html">SessionStorage</a>
+            <a href="session/sessionStorage.html">SessionStorage</a>
           </li>
 
           <li>
-            <a href="localStorage.html">LocalStorage</a>
+            <a href="local/localStorage.html">LocalStorage</a>
           </li>
 
           <li>
-            <a href="indexedDB.html">IndexedDB</a>
+            <a href="indexed/indexedDB.html">IndexedDB</a>
           </li>
 
           <li>
