--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </li>
 
           <li>
-            <a href="bibliografia/fuentesBibliograficas.html">Fuentes bibliograficas</a>
+            <a href="bibliografía/fuentesBibliograficas.html">Fuentes bibliograficas</a>
           </li>
 
         </ul>
@@ -44,7 +44,6 @@
             entre éstas dos es que localStorage almacena la información de forma indefinida o hasta que se decida limpiar los datos del navegador y sessionStorage almacena información mientras la pestaña donde se esté utilizando siga abierta, una vez cerrada, la información se elimina.
           </p>
         </div>
-
       </section>
       
       <footer class="site-footer">
